--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="//unpkg.com/leaflet/dist/leaflet.css" />
+
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
@@ -24,6 +26,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
   </script>
+  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  <script src="//unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="//unpkg.com/vue2-leaflet"></script>
 </body>
 
 </html>
