--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="//unpkg.com/leaflet/dist/leaflet.css" />
-
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
@@ -29,6 +28,7 @@
   <!-- Make sure you put this AFTER Leaflet's CSS -->
   <script src="//unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="//unpkg.com/vue2-leaflet"></script>
+  <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
 </body>
 
 </html>
